[gd_scene load_steps=4 format=2]

[ext_resource path="res://minegrid.gd" type="Script" id=1]
[ext_resource path="res://assets/victoire.png" type="Texture" id=2]
[ext_resource path="res://assets/game_over.png" type="Texture" id=3]

[node name="CenterContainer" type="CenterContainer"]
margin_right = 1600.0
margin_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 704.0
margin_top = 392.0
margin_right = 896.0
margin_bottom = 508.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 10, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TexVictoire" type="TextureRect" parent="VBoxContainer"]
margin_right = 192.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 160, 32 )
texture = ExtResource( 2 )

[node name="TexGameOver" type="TextureRect" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 192.0
margin_bottom = 68.0
texture = ExtResource( 3 )

[node name="ResetButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 192.0
margin_bottom = 92.0
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 192.0
margin_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 20, 20 )
custom_constants/vseparation = -1
custom_constants/hseparation = -1
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}
